[package]
name = "adafruit_motorhat"
version = "0.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
linux-embedded-hal = "0.3"
pwm-pca9685 = "0.2"
rppal = { version = "0.11", features = ["hal"] }
