[package]
name = "adafruit_motorkit"
version = "0.1.1"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
edition = "2018"
description = "A simple driver for the Adafruit DC and Stepper Motor HAT."
readme = "README.md"
homepage = "https://github.com/ostrosco/adafruit_motorkit"
repository = "https://github.com/ostrosco/adafruit_motorkit"
keywords = ["motor", "adafruit", "dc", "stepper"]
license = "MIT"

[dependencies]
lazy_static = "1"
linux-embedded-hal = "0.4"
pwm-pca9685 = "1"
rppal = { version = "0.19", features = ["hal"] }
